...

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="createAccountButtonPressed"
            android:text="@string/Create_btn" />
    </TableRow>

...
