<resources>
    <string name="app_name">DAL Polls</string>
    <string name="title_activity_admin_page">Admin_page</string>
    <string name="tab_text_1">Admin</string>
    <string name="tab_text_2">Create Election</string>
    <string name="help_date">Date Format: mm/dd/yyyy</string>
    <string name="tab_text_3">Test</string>
    <string name="email_main">email</string>
    <string name="password_main">password</string>
    <string name="Create_btn">Create Account / Sign In</string>
    <string name="welcome_main">Welcome to DAL Polls</string>
    <string name="view_election_tab">View Elections</string>
    <string name="title_activity_new_election">NewElection</string>
    <string name="title_activity_new_question">NewQuestion</string>
    <string name="edit_election_title_hint">Title</string>
    <string name="edit_election_start_date_hint">Start Date (mm/dd/yyyy)</string>
    <string name="edit_election_end_date_hint">End Date (mm/dd/yyyy)</string>
    <string name="btn_election_save_text">Save</string>
    <string name="btn_election_delete_text">Delete</string>
    <string name="welcome_msg">User:</string>
    <string name="invalid_date_toast_message">Error: Invalid Date Format</string>
    <string name="invalid_title_toast_message">Error: Invalid Title</string>
    <string name="calendar_title">Select a start and end date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="toggle_visable">Visable</string>
    <string name="toggle_votable">Votable</string>
    <string name="toggle_results">Results</string>
    <string name="channel_description">A channel for notifications</string>
    <string name="title_activity_voter_main">VoterMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="preview">Preview</string>
    <string name="hello">Hello</string>
    <string name="channel_name">DALPOLLS</string>
    <string name="clone_election_toast_message">Cloning Election</string>
    <string name="clone_election">Clone</string>
    <string name="user_error">User Id Missing. Please Try Again.</string>
</resources>
