<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewElection"
    tools:showIn="@layout/activity_new_election">

    <TextView
        android:id="@+id/text_Answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="Questions"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/btnElectionDelete"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editElectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_election_title_hint"
            android:importantForAutofill="no"
            android:inputType="textAutoCorrect|textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editElectionStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="10"
                android:hint="@string/edit_election_start_date_hint"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/editElectionEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="10"
                android:hint="@string/edit_election_end_date_hint"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_answers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="20px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Questions" />

    <Button
        android:id="@+id/btnElectionSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="7dp"
        android:onClick="save"
        android:text="@string/btn_election_save_text"
        app:layout_constraintEnd_toStartOf="@+id/btnElectionPreview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleVisable" />

    <Button
        android:id="@+id/btnElectionPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="9dp"
        android:onClick="preview"
        android:text="@string/preview"
        app:layout_constraintEnd_toStartOf="@+id/btnElectionPreview2"
        app:layout_constraintStart_toEndOf="@+id/btnElectionSave"
        app:layout_constraintTop_toBottomOf="@+id/toggleVotable" />

    <Button
        android:id="@+id/btnElectionClone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="7dp"
        android:onClick="clone"
        android:text="@string/clone_election"
        app:layout_constraintEnd_toStartOf="@+id/btnElectionDelete"
        app:layout_constraintStart_toEndOf="@+id/btnElectionPreview"
        app:layout_constraintTop_toBottomOf="@+id/toggleVotable" />

    <Button
        android:id="@+id/btnElectionDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="16dp"
        android:onClick="delete"
        android:text="@string/btn_election_delete_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnElectionPreview2"
        app:layout_constraintTop_toBottomOf="@+id/toggleResults" />

    <Switch
        android:id="@+id/toggleVisable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/toggle_visable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Switch
        android:id="@+id/toggleVotable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="22dp"
        android:text="@string/toggle_votable"
        app:layout_constraintStart_toEndOf="@+id/toggleVisable"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Switch
        android:id="@+id/toggleResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="30dp"
        android:text="@string/toggle_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toggleVotable"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>